# GYROIDS

./: .gitignore  Gyroids_STL.ipynb  README.md  STL_to_STEP.ipynb  gyroid_utils.yml  pyproject.toml  sanity_check.py
.streamlit/: config.toml
app/: Home.py  _bootstrap.py  jobs.py  state.py
app/components/: ct_pipeline.py  equation_input.py  field_view.py  file_picker.py  job_log.py  mesh_preview.py
app/pages/: 1_Generate_TPMS.py  2_Simulation.py  3_CT_Analysis.py  4_Library.py
examples/: ball_ct_scan.mhd  ball_ct_scan.raw  ball_ct_scan.stl  create_ball_ct_scan.py  generate_frequency_sim.py
gyroid_utils/: __init__.py  config.py  io_ops.py  logger.py  mesh_tools.py  occ_tools.py  pyproject.toml  readme.md  utils.py  viz.py
gyroid_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: CT_scan_processing.ipynb  Gyroids_STL.ipynb  Gyroids_STL_class.ipynb  STL_to_TET.ipynb  STL_to_inp_ftetwild.ipynb  full simulation workflow.ipynb  overhang_test.ipynb  schwartz-test-dist.npz  schwartz-test-dist.stl
src/gyroid_utils/: CT_scans.py  CT_visualization_window.py  SchwartzP.py  TET_mesh_tools.py  __init__.py  abaqus_tools.py  config.py  gyroid.py  io_ops.py  logger.py  mesh_tools.py  occ_tools.py  readme.md  tpms_base.py  tpms_diamond.py  tpms_gyroid.py  tpms_iwp.py  tpms_neovius.py  tpms_schwartzp.py  tpms_splitp.py  utils.py  viz.py  voxel_overhang_tools.py
src/gyroid_utils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gyroid_utils/TPMS_classes/: __init__.py  tpms_base.py  tpms_custom.py  tpms_fischerkochs.py  tpms_frd.py  tpms_lidinoid.py
tests/: conftest.py  test_gyroid.py  test_io_ops.py  test_mesh_tools.py  test_schwartzp.py  test_tpms_base.py  test_tpms_surfaces.py  test_viz.py
