[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "gyroid_utils"
version = "2.1.2"
description = "Gyroid and lattice design utilities: field generation, mesh processing, STL/INP I/O, and simulation helpers."
authors = [
    { name = "Corentin Foucher", email = "corentin.foucher@empa.ch" }
]
readme = "README.md"
license = { text = "EMPA" }
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "numpy-stl",
    "scikit-image",
    "trimesh",
    "plotly",
    "pymeshfix",
    "pyvista",
    "meshio",
    "pathlib",
    "pandas"   
]

# Optional metadata (recommended)
keywords = [
    "mesh",
    "geometry",
    "gyroid",
    "OpenCascade",
    "STL",
    "STEP",
    "visualization",
    "lattice"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Mathematics",
]


[project.urls]
Homepage = "https://github.com/your-account/gyroids"
Documentation = "https://github.com/your-account/gyroids"
Source = "https://github.com/your-account/gyroids"
Issues = "https://github.com/your-account/gyroids/issues"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gyroid_utils*"]


