[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "gyroid_utils"
version = "3.0.16"
description = "Gyroid and lattice design utilities: field generation, mesh processing, STL/INP I/O, and simulation helpers."
authors = [
    { name = "Corentin Foucher", email = "corentin.foucher@empa.ch" }
]
readme = "README.md"
license = { text = "EMPA" }
requires-python = ">=3.10.*"

dependencies = [
    "numpy==2.2.6",
    "numpy-stl==3.2.0",
    "scikit-image==0.25.2",
    "trimesh==4.11.1",
    "plotly==6.5.2",
    "pymeshfix==0.18.0",
    "pyvista==0.46.5",
    "meshio==5.3.5",
    "pathlib==1.0.1",
    "pandas==2.3.3",
    "SimpleITK==2.5.3",
    "pydicom==3.0.2",
    "tifffile==2025.5.10",
    "matplotlib==3.10.8",
    "PyQt5==5.15.11",
    "open3d",
]

# Optional metadata (recommended)
keywords = [
    "mesh",
    "geometry",
    "gyroid",
    "OpenCascade",
    "STL",
    "STEP",
    "visualization",
    "lattice"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Mathematics",
]


[project.urls]
Homepage = "https://github.com/your-account/gyroids"
Documentation = "https://github.com/your-account/gyroids"
Source = "https://github.com/your-account/gyroids"
Issues = "https://github.com/your-account/gyroids/issues"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["gyroid_utils*"]


