[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "gyroid_utils"
version = "0.1.1"
description = "mesh processing, OCC geometry handling, and visualization utilities for gyroid and lattice structures."
authors = [
    { name = "Corentin Foucher", email = "corentin.foucher@empa.ch" }
]
readme = "README.md"
license = { text = "EMPA" }
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "trimesh",
    "open3d",
    "plotly",
]

# Optional metadata (recommended)
keywords = [
    "mesh",
    "geometry",
    "gyroid",
    "OpenCascade",
    "STL",
    "STEP",
    "visualization",
    "lattice"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Mathematics",
]


[project.urls]
Homepage = "https://github.com/your-account/gyroids"
Documentation = "https://github.com/your-account/gyroids"
Source = "https://github.com/your-account/gyroids"
Issues = "https://github.com/your-account/gyroids/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["gyroid_utils*"]

